--- a/backend/plugins/bootnetcrasher/school/controllers/parentcontroller/update.htm
+++ b/backend/plugins/bootnetcrasher/school/controllers/parentcontroller/update.htm
@@ -13,6 +13,8 @@
             <?= $this->formRender() ?>
         </div>
 
+        <?= $this->relationRender('eleves') ?>
+
         <div class="form-buttons">
             <div class="loading-indicator-container">
                 <button
