redesigned le menu et trouver une solution pour le cas du parametrage - [x] Espace bakend-V2: lorsque nous cliquons paramètre ne pas afficher un menu

--- a/backend-V2/public/index.html
+++ b/backend-V2/public/index.html
@@ -27,6 +27,8 @@
   <!--  Fonts and icons     -->
   <link type="text/css" href="https://fonts.googleapis.com/css?family=Muli:400,300" rel="stylesheet">
   <link type="text/css" href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
+  <!-- <link href="https://unpkg.com/nprogress@0.2.0/nprogress.css" rel="stylesheet" /> -->
+
   <!--<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">-->
   <!--<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.7/css/all.css" rel="stylesheet">-->
   <!--<link rel="stylesheet" href="../src/assets/fontawesome-5.13.0/css/all.min.css">-->
@@ -64,6 +66,7 @@
 <!-- built files will be auto injected -->
 <!--  Google Maps Plugin    -->
 <script src="https://maps.googleapis.com/maps/api/js?libraries=places&key=AIzaSyAamVCoyQ4AuvBpxVRMs9P-HFkfPVQj0Kw" type="text/javascript"></script>
+<!-- <script src="https://unpkg.com/nprogress@0.2.0/nprogress.js"></script> -->
 
 </body>
 </html>
