--- a/frontend/index.html
+++ b/frontend/index.html
@@ -126,7 +126,7 @@
   <script src="https://kit.fontawesome.com/a076d05399.js"></script>
   </head>
   <body>
-    <div id="app"></div>
+    <div class="wrapper" id="app"></div>
     <!-- built files will be auto injected -->
   </body>
 </html>
